--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/Index.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/Index.cshtml
@@ -1,24 +1,47 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+﻿<body background="">
+    @model OrcamentoData.User
+    @{
+        ViewBag.Title = "Index";
+    }
+
+    @using (Html.BeginForm("Index", "Home", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        <div class="container">
+            <div style="max-width: 360px; padding: 15px;  margin: 0 auto; background-color:rgb(226, 226, 226);">
+                <h4 style="text-align:center; margin-bottom:10%; margin-top:3%;">Login</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div style="margin-left:7%;">
+                    <div style="margin-left:-4%;">
+                        @Html.LabelFor(model => model.emailusuario, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <br />
+                    @Html.EditorFor(model => model.emailusuario, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.emailusuario, "", new { @class = "text-danger" })
+
+                    <br />
+                    <div style="margin-left:-4%;">
+                        @Html.LabelFor(model => model.senhausuario, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                    <br />
+                    @Html.EditorFor(model => model.senhausuario, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.senhausuario, "", new { @class = "text-danger" })
+                    <br /><br />
+                    <div style="margin-bottom:4%;">
+                        <input type="submit" style="width:100%;" value="Entrar" class="btn btn-primary" />
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    }
+
+    <div style="margin-top:9%; text-align:right">
+        @Html.ActionLink("Entrar sem Login", "IndexCategorias")
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</body>
