--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteCategorias.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteCategorias.cshtml
@@ -4,37 +4,45 @@
     ViewBag.Title = "DeleteCategorias";
 }
 
-<h2>DeleteCategoria</h2>
+<h2>DeleteCategorias</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Categorias</legend>
+<div>
+    <h4>Categorias</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.IdCategoria)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.IdCategoria)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.IdCategoria)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.IdCategoria)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.NomeCategoria)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NomeCategoria)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.NomeCategoria)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.DescricaoCategoria)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.DescricaoCategoria)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
+        <dd>
+            @Html.DisplayFor(model => model.NomeCategoria)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DescricaoCategoria)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DescricaoCategoria)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
