--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteClientes.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteClientes.cshtml
@@ -7,90 +7,106 @@
 <h2>DeleteClientes</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Clientes</legend>
+<div>
+    <h4>Clientes</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.IdCliente)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.IdCliente)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.IdCliente)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.IdCliente)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.NomeCliente)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NomeCliente)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.NomeCliente)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.CPF)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.CPF)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.NomeCliente)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.RG)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.RG)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.CPF)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Telefone)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Telefone)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.CPF)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Endereco)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Endereco)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.RG)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Numero)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Numero)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.RG)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Bairro)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Bairro)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.Telefone)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Cidade)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Cidade)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.Telefone)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.UF)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.UF)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.Endereco)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.CEP)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.CEP)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "IndexClientes")
-    </p>
-}
+        <dd>
+            @Html.DisplayFor(model => model.Endereco)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Numero)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Numero)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Bairro)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Bairro)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Cidade)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Cidade)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.UF)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UF)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CEP)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CEP)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
