--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteUnidades.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/DeleteUnidades.cshtml
@@ -7,34 +7,42 @@
 <h2>DeleteUnidades</h2>
 
 <h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Unidades</legend>
+<div>
+    <h4>Unidades</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.IdUnidade)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.IdUnidade)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.IdUnidade)
-    </div>
+        <dd>
+            @Html.DisplayFor(model => model.IdUnidade)
+        </dd>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Sigla)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Sigla)
-    </div>
+        <dt>
+            @Html.DisplayNameFor(model => model.NomeUnidade)
+        </dt>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.NomeUnidade)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.NomeUnidade)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "IndexUnidades")
-    </p>
-}
+        <dd>
+            @Html.DisplayFor(model => model.NomeUnidade)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sigla)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sigla)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
