--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/EditUnidades.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/EditUnidades.cshtml
@@ -6,45 +6,43 @@
 
 <h2>EditUnidades</h2>
 
-@using (Html.BeginForm()) {
+
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    
+    <div class="form-horizontal">
+        <h4>Unidades</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.IdUnidade)
 
-    <fieldset>
-        <legend>Unidades</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.IdUnidade)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.IdUnidade)
-            @Html.ValidationMessageFor(model => model.IdUnidade)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Sigla)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Sigla)
-            @Html.ValidationMessageFor(model => model.Sigla)
+        <div class="form-group">
+            @Html.LabelFor(model => model.NomeUnidade, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NomeUnidade, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NomeUnidade, "", new { @class = "text-danger" })
+            </div>
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.NomeUnidade)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.NomeUnidade)
-            @Html.ValidationMessageFor(model => model.NomeUnidade)
+        <div class="form-group">
+            @Html.LabelFor(model => model.Sigla, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Sigla, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Sigla, "", new { @class = "text-danger" })
+            </div>
         </div>
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "IndexEnidades")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
