--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarCategorias.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarCategorias.cshtml
@@ -1,24 +1,12 @@
 ﻿@model IEnumerable<OrcamentoData.Categorias>
 
 @{
-    ViewBag.Title = "IndexCategorias";
+    ViewBag.Title = "PesquisarCategorias";
 }
 
-<h2>Categorias</h2>
+<h2>PesquisarCategorias</h2>
+<br /><br />
 
-<div style="margin-left:78%;">
-    <h4 style="margin-left:5%;">Pesquisar Por Nome:</h4>
-    <form action="/Home/PesquisarCategorias" method="post" style="text-align:left">
-        <input style="width: 100px;" id="Nome" type="text" name="Nome"  />
-        <input type="submit" name="pesquisar" value="Pesquisar" />
-    </form>
-</div>
-<br />
-
-
-<p>
-    @Html.ActionLink("Cadastrar", "CreateCategorias")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -44,11 +32,6 @@
         <td>
             @Html.DisplayFor(modelItem => item.DescricaoCategoria)
         </td>
-        <td>
-            @Html.ActionLink("Editar", "EditCategorias", new { pIdCategoria = item.IdCategoria }) |  
-            @Html.ActionLink("Deletar", "DeleteCategorias", new { pIdCategoria = item.IdCategoria })
-        </td>
-
     </tr>
 }
 
