--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarClientes.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarClientes.cshtml
@@ -1,25 +1,11 @@
 ﻿@model IEnumerable<OrcamentoData.Clientes>
 
 @{
-    ViewBag.Title = "IndexClientes";
+    ViewBag.Title = "PesquisarClientes";
 }
 
-<h2>Clientes</h2>
-
-
-<div style="margin-left:78%;">
-    <h4 style="margin-left:5%;">Pesquisar Por Nome:</h4>
-    <form action="/Home/PesquisarClientes" method="post" style="text-align:left">
-        <input style="width: 100px;" id="Nome" type="text" name="Nome" />
-        <input type="submit" name="pesquisar" value="Pesquisar" />
-    </form>
-</div>
-<br />
-
-
-<p>
-    @Html.ActionLink("Cadastrar", "CreateClientes")
-</p>
+<h2>PesquisarClientes</h2>
+<br /><br />
 <table class="table">
     <tr>
         <th>
@@ -92,10 +78,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CEP)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "EditClientes", new { pIdCliente = item.IdCliente }) |
-            @Html.ActionLink("Deletar", "DeleteClientes", new { pIdCliente = item.IdCliente })
         </td>
     </tr>
 }
