--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Shared/_IndexOrcProd2.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Shared/_IndexOrcProd2.cshtml
@@ -2,17 +2,18 @@
 
 <table class="table">
     <tr>
-        <th>Nome</th>
-        <th>Valor Unitário</th>
-        <th>Quantidade</th>
-        <th>Total Item</th>
+        <th>Unid.</th>
+        <th>Descriminação do Produto</th>
+        <th>Quant.</th>
+        <th>V. Unitário</th>
+        <th>Total</th>
     </tr>
 
     @{var OrcProd = (List<OrcamentoData.OrcamentosProdutos>)ViewBag.List;}
 
     @{int IdOrcProd = ViewBag.IdOrcamento;}
 
-    @{decimal TotalOrc = 0;}
+    @{decimal TotalOrc = 0.2M;}
 
     @if (OrcProd != null)
     {
@@ -21,9 +22,10 @@
             if (orcprod.Orcamento.IdOrcamento == IdOrcProd)
             {
                 <tr>
+                    <td>@orcprod.Produto.Unidade.Sigla</td>
                     <td>@orcprod.Produto.NomeProduto</td>
-                    <td>@orcprod.Produto.Valor</td>
                     <td>@orcprod.Quantidade</td>
+                    <td>@orcprod.Produto.Valor</td>
                     <td>@orcprod.TotalItem</td>
                 </tr>
                 TotalOrc = TotalOrc + @orcprod.TotalItem;
@@ -34,8 +36,7 @@
         <th>Total Orcamento</th>
         <th></th>
         <th></th>
+        <th></th>
         <th>@TotalOrc</th>
-        <th></th>
-        <th></th>
     </tr>
 </table>
