--- a/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarOrcamentos.cshtml
+++ b/GerenciadorDeOrcamentos/GerenciadorDeOrcamentos/OrcamentoUI/Views/Home/PesquisarOrcamentos.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<OrcamentoData.Orcamentos>
 
 @{
-    ViewBag.Title = "IndexOrcamentos";
+    ViewBag.Title = "PesquisarOrcamentos";
 }
 
 <br />
@@ -9,17 +9,6 @@
 
 
 <h1>Orçamentos</h1>
-
-<div style="margin-left:78%;">
-    <h4 style="margin-left:3%;">Pesquisar Por Cliente:</h4>
-    <form action="/Home/PesquisarOrcamentos" method="post" style="text-align:left">
-        <input style="width: 100px;" id="Nome" type="text" name="Nome" />
-        <input type="submit" name="pesquisar" value="Pesquisar" />
-    </form>
-</div>
-<br />
-
-
 <table class="table">
     <tr>
         <th>Código</th>
